okomentované a formátované scripty k projektu

--- a/01_nacteni_dat_web_scraping.ipynb
+++ b/01_nacteni_dat_web_scraping.ipynb
@@ -1,23 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Script pro úvodní načtení dat stažených přes Apify Google maps Extractor a jejich základní pročištění"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open ('dataset_google-maps-extractor_2024-04-15_Brno_kavarny.json', encoding='utf-8') as file:\n",
-    "    cafes = json.load(file)"
    ]
   },
   {
@@ -77,6 +73,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Načtení prvního datasetu (scraped by Search term: \"kavárna\"):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open ('dataset_google-maps-extractor_2024-04-15_Brno_kavarny.json', encoding='utf-8') as file:\n",
+    "    cafes = json.load(file)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -95,6 +108,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vytvoření prvního souboru s pročištěnými daty podle hesla \"kavárna\":"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -102,6 +122,13 @@
    "source": [
     "with open('dataset_google-maps-extractor_Brno_kavarny_cleaned.json', mode='w', encoding='utf-8') as output_file:\n",
     "    json.dump(cafes_filtered, output_file, indent=4, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Načtení a pročštění druhého datasetu (scraped by Category \"cafe\"):"
    ]
   },
   {
@@ -116,12 +143,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_cafe_cleaned = filter_keys_in_list_of_cafes(category_cafe, keys_needed)\n",
+    "\n",
+    "category_cafe_filtered = filter_by_category(category_cafe_cleaned)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Načtení a pročištění třetího datasetu (scraped by Category \"coffee shop\"):"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open ('dataset_google-maps-extractor_2024-04-18_Brno_Coffee_shop.json', encoding='utf-8') as file:\n",
     "    category_coffee_shop = json.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_coffee_shop_cleaned = filter_keys_in_list_of_cafes(category_coffee_shop, keys_needed)\n",
+    "\n",
+    "category_coffee_shop_filtered = filter_by_category(category_coffee_shop_cleaned)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Načtení a pročištění čtvrtého datasetu (scraped by Category \"espresso bar\"):"
    ]
   },
   {
@@ -136,56 +199,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "category_cafe_cleaned = filter_keys_in_list_of_cafes(category_cafe, keys_needed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "category_cafe_filtered = filter_by_category(category_cafe_cleaned)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "category_coffee_shop_cleaned = filter_keys_in_list_of_cafes(category_coffee_shop, keys_needed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "category_coffee_shop_filtered = filter_by_category(category_coffee_shop_cleaned)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "category_espresso_bar_cleaned = filter_keys_in_list_of_cafes(category_espresso_bar, keys_needed)"
+    "category_espresso_bar_cleaned = filter_keys_in_list_of_cafes(category_espresso_bar, keys_needed)\n",
+    "\n",
+    "category_espresso_bar_filtered = filter_by_category(category_espresso_bar_cleaned)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "category_espresso_bar_filtered = filter_by_category(category_espresso_bar_cleaned)"
+    "Vytvoření 3 souborů s pročištěnými daty dle kategorií cafe, coffee shop, espresso bar:"
    ]
   },
   {
@@ -202,6 +229,15 @@
     "\n",
     "with open('dataset_google-maps-extractor_Brno_category_espresso_bar_cleaned.json', mode='w', encoding='utf-8') as output_file:\n",
     "    json.dump(category_espresso_bar_filtered, output_file, indent=4, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Porovnávání názvů kaváren (cafe[\"title\"]) v jednotlivých datasetech:\n",
+    "\n",
+    "vytvoření množiny titulů, které jsou v doplňkových datasetech (stažených podle kategorií) a v prvním datasetu chybí"
    ]
   },
   {
