--- a/03_final_dataset.ipynb
+++ b/03_final_dataset.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Závěrečné propojení datasetů:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -47,6 +54,13 @@
    "source": [
     "with open('maps_google_scraped_final_dataset_V2.json', mode= 'w', encoding= 'utf-8') as output_file:\n",
     "    json.dump(final_dataset, output_file, indent= 4, ensure_ascii= False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Procházení a kontrola propojeného datasetu:"
    ]
   },
   {
@@ -1472,341 +1486,6 @@
    ],
    "source": [
     "null_postalCode = final_read[final_read['postalCode'].isna()]\n",
-    "null_postalCode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>searchString</th>\n",
-       "      <th>title</th>\n",
-       "      <th>categoryName</th>\n",
-       "      <th>address</th>\n",
-       "      <th>street</th>\n",
-       "      <th>city</th>\n",
-       "      <th>postalCode</th>\n",
-       "      <th>claimThisBusiness</th>\n",
-       "      <th>location</th>\n",
-       "      <th>totalScore</th>\n",
-       "      <th>temporarilyClosed</th>\n",
-       "      <th>placeId</th>\n",
-       "      <th>categories</th>\n",
-       "      <th>cid</th>\n",
-       "      <th>reviewsCount</th>\n",
-       "      <th>reviewsDistribution</th>\n",
-       "      <th>openingHours</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>kavárna</td>\n",
-       "      <td>Kavárna U Šimpanze</td>\n",
-       "      <td>Coffee shop</td>\n",
-       "      <td>635 00, Brno-Bystrc, Czechia</td>\n",
-       "      <td>635 00</td>\n",
-       "      <td>Brno-Bystrc</td>\n",
-       "      <td>None</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'lat': 49.2305035, 'lng': 16.5337673}</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>ChIJe8xi1c-WEkcRZHdDHuo3j90</td>\n",
-       "      <td>[Coffee shop]</td>\n",
-       "      <td>1.596504e+19</td>\n",
-       "      <td>1</td>\n",
-       "      <td>{'oneStar': 0, 'twoStar': 0, 'threeStar': 0, '...</td>\n",
-       "      <td>[{'day': 'Monday', 'hours': '10 AM to 6 PM'}, ...</td>\n",
-       "      <td>https://www.google.com/maps/search/?api=1&amp;quer...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>kavárna</td>\n",
-       "      <td>Stop Cafe</td>\n",
-       "      <td>Cafe</td>\n",
-       "      <td>616 00 Brno-Žabovřesky, Czechia</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Brno-Žabovřesky</td>\n",
-       "      <td>None</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'lat': 49.218914, 'lng': 16.5754237}</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "      <td>ChIJyZSAVByUEkcR-sUl_5lIeD8</td>\n",
-       "      <td>[Cafe]</td>\n",
-       "      <td>4.573485e+18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>{'oneStar': 0, 'twoStar': 0, 'threeStar': 0, '...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>https://www.google.com/maps/search/?api=1&amp;quer...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>kavárna</td>\n",
-       "      <td>KOFI-KOFI</td>\n",
-       "      <td>Coffee shop</td>\n",
-       "      <td>Purkyňova, 621 00 Brno-Královo Pole, Czechia</td>\n",
-       "      <td>Purkyňova</td>\n",
-       "      <td>Brno-Královo Pole</td>\n",
-       "      <td>None</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'lat': 49.2312949, 'lng': 16.576810000000002}</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "      <td>ChIJS-fkOJaXEkcRMbJEqh64uro</td>\n",
-       "      <td>[Coffee shop]</td>\n",
-       "      <td>1.345527e+19</td>\n",
-       "      <td>0</td>\n",
-       "      <td>{'oneStar': 0, 'twoStar': 0, 'threeStar': 0, '...</td>\n",
-       "      <td>[{'day': 'Monday', 'hours': '7 AM to 5 PM'}, {...</td>\n",
-       "      <td>https://www.google.com/maps/search/?api=1&amp;quer...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>kavárna</td>\n",
-       "      <td>Stop. Cafe</td>\n",
-       "      <td>Cafe</td>\n",
-       "      <td>624 00 Brno-Komín, Czechia</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Brno-Komín</td>\n",
-       "      <td>None</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'lat': 49.2231868, 'lng': 16.5374183}</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>ChIJm9mzpsaWEkcRtnxQPaR9ZpI</td>\n",
-       "      <td>[Cafe]</td>\n",
-       "      <td>1.054926e+19</td>\n",
-       "      <td>1</td>\n",
-       "      <td>{'oneStar': 0, 'twoStar': 0, 'threeStar': 0, '...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>https://www.google.com/maps/search/?api=1&amp;quer...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>222</th>\n",
-       "      <td>kavárna</td>\n",
-       "      <td>Cukrárna Park Lužánky</td>\n",
-       "      <td>Cafe</td>\n",
-       "      <td>602 00 Brno-střed, Czechia</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Brno-střed</td>\n",
-       "      <td>None</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'lat': 49.208197, 'lng': 16.6069571}</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>False</td>\n",
-       "      <td>ChIJjfpCKmmVEkcRyV_PRU7cwGU</td>\n",
-       "      <td>[Cafe]</td>\n",
-       "      <td>7.332102e+18</td>\n",
-       "      <td>11</td>\n",
-       "      <td>{'oneStar': 0, 'twoStar': 0, 'threeStar': 0, '...</td>\n",
-       "      <td>[{'day': 'Monday', 'hours': '10 AM to 6 PM'}, ...</td>\n",
-       "      <td>https://www.google.com/maps/search/?api=1&amp;quer...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>228</th>\n",
-       "      <td>kavárna</td>\n",
-       "      <td>Design lab MENDELU</td>\n",
-       "      <td>Coffee shop</td>\n",
-       "      <td>Černá Pole, 613 00 Brno-sever, Czechia</td>\n",
-       "      <td>Černá Pole</td>\n",
-       "      <td>Brno-sever</td>\n",
-       "      <td>None</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'lat': 49.2117517, 'lng': 16.6169172}</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>ChIJo7fsidqVEkcRCB3V_qX8ues</td>\n",
-       "      <td>[Coffee shop]</td>\n",
-       "      <td>1.698589e+19</td>\n",
-       "      <td>25</td>\n",
-       "      <td>{'oneStar': 0, 'twoStar': 0, 'threeStar': 0, '...</td>\n",
-       "      <td>[{'day': 'Monday', 'hours': '7:30 AM to 5 PM'}...</td>\n",
-       "      <td>https://www.google.com/maps/search/?api=1&amp;quer...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>271</th>\n",
-       "      <td>kavárna</td>\n",
-       "      <td>Costa Coffee</td>\n",
-       "      <td>Cafe</td>\n",
-       "      <td>Brno hl.n., 602 00 Brno, Brno-střed, Czechia</td>\n",
-       "      <td>Brno hl.n., 602 00 Brno</td>\n",
-       "      <td>Brno-střed</td>\n",
-       "      <td>None</td>\n",
-       "      <td>False</td>\n",
-       "      <td>{'lat': 49.1913241, 'lng': 16.6133998}</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>False</td>\n",
-       "      <td>ChIJk2NsJS6VEkcR8bOWn6X4H8Q</td>\n",
-       "      <td>[Cafe]</td>\n",
-       "      <td>1.413229e+19</td>\n",
-       "      <td>125</td>\n",
-       "      <td>{'oneStar': 18, 'twoStar': 17, 'threeStar': 14...</td>\n",
-       "      <td>[{'day': 'Monday', 'hours': '5:30 AM to 9 PM'}...</td>\n",
-       "      <td>https://www.google.com/maps/search/?api=1&amp;quer...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>402</th>\n",
-       "      <td>coffee shop</td>\n",
-       "      <td>Stánek s trdelníky</td>\n",
-       "      <td>Coffee shop</td>\n",
-       "      <td>602 00 Brno-střed, Czechia</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Brno-střed</td>\n",
-       "      <td>None</td>\n",
-       "      <td>True</td>\n",
-       "      <td>{'lat': 49.1904119, 'lng': 16.6108517}</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>False</td>\n",
-       "      <td>ChIJO0_vlueVEkcRdybhvPNmL84</td>\n",
-       "      <td>[Coffee shop]</td>\n",
-       "      <td>1.485721e+19</td>\n",
-       "      <td>2</td>\n",
-       "      <td>{'oneStar': 0, 'twoStar': 0, 'threeStar': 0, '...</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>https://www.google.com/maps/search/?api=1&amp;quer...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    searchString                  title categoryName  \\\n",
-       "0        kavárna     Kavárna U Šimpanze  Coffee shop   \n",
-       "45       kavárna              Stop Cafe         Cafe   \n",
-       "111      kavárna              KOFI-KOFI  Coffee shop   \n",
-       "114      kavárna             Stop. Cafe         Cafe   \n",
-       "222      kavárna  Cukrárna Park Lužánky         Cafe   \n",
-       "228      kavárna     Design lab MENDELU  Coffee shop   \n",
-       "271      kavárna           Costa Coffee         Cafe   \n",
-       "402  coffee shop     Stánek s trdelníky  Coffee shop   \n",
-       "\n",
-       "                                          address                   street  \\\n",
-       "0                    635 00, Brno-Bystrc, Czechia                   635 00   \n",
-       "45                616 00 Brno-Žabovřesky, Czechia                     None   \n",
-       "111  Purkyňova, 621 00 Brno-Královo Pole, Czechia                Purkyňova   \n",
-       "114                    624 00 Brno-Komín, Czechia                     None   \n",
-       "222                    602 00 Brno-střed, Czechia                     None   \n",
-       "228        Černá Pole, 613 00 Brno-sever, Czechia               Černá Pole   \n",
-       "271  Brno hl.n., 602 00 Brno, Brno-střed, Czechia  Brno hl.n., 602 00 Brno   \n",
-       "402                    602 00 Brno-střed, Czechia                     None   \n",
-       "\n",
-       "                  city postalCode  claimThisBusiness  \\\n",
-       "0          Brno-Bystrc       None               True   \n",
-       "45     Brno-Žabovřesky       None               True   \n",
-       "111  Brno-Královo Pole       None               True   \n",
-       "114         Brno-Komín       None               True   \n",
-       "222         Brno-střed       None               True   \n",
-       "228         Brno-sever       None               True   \n",
-       "271         Brno-střed       None              False   \n",
-       "402         Brno-střed       None               True   \n",
-       "\n",
-       "                                           location  totalScore  \\\n",
-       "0            {'lat': 49.2305035, 'lng': 16.5337673}         5.0   \n",
-       "45            {'lat': 49.218914, 'lng': 16.5754237}         NaN   \n",
-       "111  {'lat': 49.2312949, 'lng': 16.576810000000002}         NaN   \n",
-       "114          {'lat': 49.2231868, 'lng': 16.5374183}         5.0   \n",
-       "222           {'lat': 49.208197, 'lng': 16.6069571}         2.6   \n",
-       "228          {'lat': 49.2117517, 'lng': 16.6169172}         5.0   \n",
-       "271          {'lat': 49.1913241, 'lng': 16.6133998}         3.5   \n",
-       "402          {'lat': 49.1904119, 'lng': 16.6108517}         4.5   \n",
-       "\n",
-       "     temporarilyClosed                      placeId     categories  \\\n",
-       "0                False  ChIJe8xi1c-WEkcRZHdDHuo3j90  [Coffee shop]   \n",
-       "45               False  ChIJyZSAVByUEkcR-sUl_5lIeD8         [Cafe]   \n",
-       "111              False  ChIJS-fkOJaXEkcRMbJEqh64uro  [Coffee shop]   \n",
-       "114              False  ChIJm9mzpsaWEkcRtnxQPaR9ZpI         [Cafe]   \n",
-       "222              False  ChIJjfpCKmmVEkcRyV_PRU7cwGU         [Cafe]   \n",
-       "228              False  ChIJo7fsidqVEkcRCB3V_qX8ues  [Coffee shop]   \n",
-       "271              False  ChIJk2NsJS6VEkcR8bOWn6X4H8Q         [Cafe]   \n",
-       "402              False  ChIJO0_vlueVEkcRdybhvPNmL84  [Coffee shop]   \n",
-       "\n",
-       "              cid  reviewsCount  \\\n",
-       "0    1.596504e+19             1   \n",
-       "45   4.573485e+18             0   \n",
-       "111  1.345527e+19             0   \n",
-       "114  1.054926e+19             1   \n",
-       "222  7.332102e+18            11   \n",
-       "228  1.698589e+19            25   \n",
-       "271  1.413229e+19           125   \n",
-       "402  1.485721e+19             2   \n",
-       "\n",
-       "                                   reviewsDistribution  \\\n",
-       "0    {'oneStar': 0, 'twoStar': 0, 'threeStar': 0, '...   \n",
-       "45   {'oneStar': 0, 'twoStar': 0, 'threeStar': 0, '...   \n",
-       "111  {'oneStar': 0, 'twoStar': 0, 'threeStar': 0, '...   \n",
-       "114  {'oneStar': 0, 'twoStar': 0, 'threeStar': 0, '...   \n",
-       "222  {'oneStar': 0, 'twoStar': 0, 'threeStar': 0, '...   \n",
-       "228  {'oneStar': 0, 'twoStar': 0, 'threeStar': 0, '...   \n",
-       "271  {'oneStar': 18, 'twoStar': 17, 'threeStar': 14...   \n",
-       "402  {'oneStar': 0, 'twoStar': 0, 'threeStar': 0, '...   \n",
-       "\n",
-       "                                          openingHours  \\\n",
-       "0    [{'day': 'Monday', 'hours': '10 AM to 6 PM'}, ...   \n",
-       "45                                                  []   \n",
-       "111  [{'day': 'Monday', 'hours': '7 AM to 5 PM'}, {...   \n",
-       "114                                                 []   \n",
-       "222  [{'day': 'Monday', 'hours': '10 AM to 6 PM'}, ...   \n",
-       "228  [{'day': 'Monday', 'hours': '7:30 AM to 5 PM'}...   \n",
-       "271  [{'day': 'Monday', 'hours': '5:30 AM to 9 PM'}...   \n",
-       "402                                                 []   \n",
-       "\n",
-       "                                                   url  \n",
-       "0    https://www.google.com/maps/search/?api=1&quer...  \n",
-       "45   https://www.google.com/maps/search/?api=1&quer...  \n",
-       "111  https://www.google.com/maps/search/?api=1&quer...  \n",
-       "114  https://www.google.com/maps/search/?api=1&quer...  \n",
-       "222  https://www.google.com/maps/search/?api=1&quer...  \n",
-       "228  https://www.google.com/maps/search/?api=1&quer...  \n",
-       "271  https://www.google.com/maps/search/?api=1&quer...  \n",
-       "402  https://www.google.com/maps/search/?api=1&quer...  "
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "PSC = {\n",
-    "'Brno-Bystrc': 63500,\n",
-    "'Brno-Žabovřesky': 61600,\n",
-    "'Brno-Královo Pole': 61200,\n",
-    "'Brno-Komín': 62400,\n",
-    "'Brno-střed': 60200,\n",
-    "'Černá Pole': 61300,\n",
-    "}\n",
-    "\n",
-    "# NEFUNGUJE!!!!\n",
-    "\n",
-    "for address in null_postalCode:\n",
-    "    if 'Brno-Bystrc' in null_postalCode['address']:\n",
-    "        null_postalCode['postalCode'] = '635 00'\n",
-    "\n",
     "null_postalCode"
    ]
   }
