--- a/04_normalizace_dat.ipynb
+++ b/04_normalizace_dat.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pokus o normalizaci dat vnořených v JSON strukturách\n",
+    "\n",
+    "*Nakonec jsme tento kód nevyužili a data z JSON struktur rozbalovali až v SQL (JSON formát se nám později narušil stažením informací přes Nominatim API a ze souboru jsme udělali CSV), proto není kompletní a normalizuje jen sloupce [openingHours] a [categories]*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
