--- a/06_filtrace_podniku.ipynb
+++ b/06_filtrace_podniku.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Script pro další pročištění dat\n",
+    "\n",
+    "*I po základním pročištění v datech zůstalo spoustu podniků, které nejsou kavárnami. Podle různých klíčů jsme sestavili seznam non_cafes_final.txt, tento načetli do Pythonu a podniky pak z dat vymazali.*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -496,7 +505,6 @@
    ],
    "source": [
     "data = data.drop('Unnamed: 0', axis= 1)\n",
-    "#data = data.set_index('placeId')\n",
     "data"
    ]
   },
