--- a/07_souradnice.ipynb
+++ b/07_souradnice.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scrip pro výpočet vzdáleností mezi vysokoškolskými fakultami a kavárnami (podle souřadnic)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +19,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definice funkce pro výpočet vzdálenosti:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_distance(row):\n",
+    "    coords_1 = (row['lat_x'], row['lng_x'])\n",
+    "    coords_2 = (row['lat_y'], row['lng_y'])\n",
+    "    return distance(coords_1, coords_2).meters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +52,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +196,7 @@
        "[354 rows x 2 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +346,6 @@
    "source": [
     "loc_data_cafes_normalized = pd.concat([data_cafes.drop('location', axis=1), locations], axis=1)\n",
     "loc_data_cafes_normalized = loc_data_cafes_normalized[['placeId', 'title', 'lat', 'lng']]\n",
-    "# loc_data_cafes_normalized = loc_data_cafes_normalized.set_index('placeId')\n",
     "loc_data_cafes_normalized"
    ]
   },
@@ -657,8 +682,14 @@
    "source": [
     "data_faculties.rename(columns={'X': 'lng', 'Y': 'lat'}, inplace=True)\n",
     "loc_data_faculties = data_faculties[['objectid', 'name', 'lat', 'lng']]\n",
-    "# loc_data_faculties = loc_data_faculties.set_index('objectid')\n",
     "loc_data_faculties"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CROSS JOIN (spojí každý řádek jednoho DataFrame s každým řádkem druhého DataFrame a vytvoří tak všechny možné kombinace řádků mezi oběma datovými sadami):"
    ]
   },
   {
@@ -860,7 +891,6 @@
     }
    ],
    "source": [
-    "# Perform a cross join\n",
     "cross_joined_loc_data = pd.merge(loc_data_cafes_normalized, loc_data_faculties, how='cross')\n",
     "cross_joined_loc_data"
    ]
@@ -869,22 +899,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "CO JE CROSS JOIN\n",
-    "\n",
-    "spojí každý řádek jednoho DataFrame s každým řádkem druhého DataFrame a vytvoří tak všechny možné kombinace řádků mezi oběma datovými sadami"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to calculate distance\n",
-    "def calculate_distance(row):\n",
-    "    coords_1 = (row['lat_x'], row['lng_x'])\n",
-    "    coords_2 = (row['lat_y'], row['lng_y'])\n",
-    "    return distance(coords_1, coords_2).meters"
+    "Výpočet vzdálenosti:"
    ]
   },
   {
@@ -918,6 +933,13 @@
     "# Apply function to calculate distances\n",
     "cross_joined_loc_data['distance_m'] = cross_joined_loc_data.apply(calculate_distance, axis=1)\n",
     "cross_joined_loc_data['distance_m']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uložení výsledků do souboru:"
    ]
   },
   {
@@ -960,7 +982,6 @@
     }
    ],
    "source": [
-    "# Print the results\n",
     "print(cross_joined_loc_data[['placeId', 'title', 'objectid', 'name', 'distance_m']])\n",
     "\n",
     "cross_joined_loc_data.to_csv('distance_cafe_faculty.csv')"
