--- a/07_souradnice.ipynb
+++ b/07_souradnice.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scrip pro výpočet vzdáleností mezi vysokoškolskými fakultami a kavárnami (podle souřadnic)"
+    "Script pro výpočet vzdáleností mezi vysokoškolskými fakultami a kavárnami (podle souřadnic)"
    ]
   },
   {
