koncové formátování python scriptů

--- a/01_nacteni_dat_web_scraping.ipynb
+++ b/01_nacteni_dat_web_scraping.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "def filter_keys_in_list_of_cafes(data, keys):\n",
-    "    # filtruje klíče ve slovnících \"cafe\" obsažených v celkovém seznamu\n",
+    "    # filtruje klíče ve slovnících obsažených v datech\n",
     "    # parametry: data = stažená data, keys = seznam klíčů, které chceme zachovat\n",
     "    filtered_data = []\n",
     "    for cafe in data:\n",
@@ -235,9 +235,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Porovnávání názvů kaváren (cafe[\"title\"]) v jednotlivých datasetech:\n",
-    "\n",
-    "vytvoření množiny titulů, které jsou v doplňkových datasetech (stažených podle kategorií) a v prvním datasetu chybí"
+    "Porovnávání názvů kaváren (cafe[\"title\"]) v jednotlivých datasetech:  \n",
+    "- vytvoření množiny titulů, které jsou v doplňkových datasetech (stažených podle kategorií) a v prvním datasetu chybí  \n",
+    "- uložení seznamu výsledných kaváren do nového souboru"
    ]
   },
   {
