--- a/07_souradnice.ipynb
+++ b/07_souradnice.ipynb
@@ -899,7 +899,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Výpočet vzdálenosti:"
+    "Výpočet vzdálenosti pomocí vlastní funkce calculate_distance():"
    ]
   },
   {
@@ -930,7 +930,6 @@
     }
    ],
    "source": [
-    "# Apply function to calculate distances\n",
     "cross_joined_loc_data['distance_m'] = cross_joined_loc_data.apply(calculate_distance, axis=1)\n",
     "cross_joined_loc_data['distance_m']"
    ]
