--- a/04_normalizace_dat.ipynb
+++ b/04_normalizace_dat.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pokus o normalizaci dat vnořených v JSON strukturách\n",
+    "Normalizace dat vnořených v JSON strukturách\n",
     "\n",
-    "*Nakonec jsme tento kód nevyužili a data z JSON struktur rozbalovali až v SQL (JSON formát se nám později narušil stažením informací přes Nominatim API a ze souboru jsme udělali CSV), proto není kompletní a normalizuje jen sloupce [openingHours] a [categories]*"
+    "*Nakonec jsme tento kód nevyužily a data z JSON struktur rozbalovaly až v SQL (JSON formát se nám narušil stažením informací přes Nominatim API a ze souboru jsme udělaly CSV), proto není kompletní a normalizuje jen sloupce [openingHours] a [categories]*"
    ]
   },
   {
